--- a/publications.html
+++ b/publications.html
@@ -3,13 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Nguyen Thieu Huy — AI Engineer Intern specializing in GenAI/LLM and Computer Vision. Graduate research on DentalGPT and AMAF-Net (Best Paper Award ICAI 2025)." />
-  <meta name="keywords" content="AI Engineer, Machine Learning, LLM, GenAI, Computer Vision, RAG, Fine-tuning" />
+  <meta name="description" content="Publications — Nguyen Thieu Huy. Research papers including AMAF-Net (Best Paper Award ICAI 2025)." />
   <meta name="author" content="Nguyen Thieu Huy" />
-  <meta property="og:title" content="Nguyen Thieu Huy — AI Engineer Portfolio" />
-  <meta property="og:description" content="AI Engineer Intern specializing in GenAI/LLM and Computer Vision" />
-  <meta property="og:type" content="website" />
-  <title>Home | Nguyen Thieu Huy</title>
+  <title>Publications | Nguyen Thieu Huy</title>
 
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -23,9 +19,9 @@
       <a class="topnav__brand" href="index.html">Nguyen Thieu Huy</a>
       <nav class="topnav__links" aria-label="Primary">
         <a href="about.html">About</a>
-        <a href="experience.html">Experience</a>
+        <a href="publications.html" aria-current="page">Publications</a>
         <a href="projects.html">Projects</a>
-        <a href="publications.html">Publications</a>
+        <a href="experience.html">Experience</a>
         <a href="blog.html">Blog</a>
         <a href="cv.html">CV</a>
       </nav>
@@ -37,7 +33,7 @@
       <div class="profile">
         <img class="profile__avatar" src="xinh.jpg" alt="Nguyen Thieu Huy" />
         <h1 class="profile__name">Nguyen Thieu Huy</h1>
-        <p class="profile__role">AI Engineer Intern</p>
+        <p class="profile__role">AI Engineer</p>
 
         <div class="profile__meta">
           <p class="meta__item">Hanoi, Vietnam</p>
@@ -55,28 +51,26 @@
 
     <section class="content">
       <article class="page">
-        <h1>Home</h1>
-        <p>
-          I'm a <strong>final-year AI student</strong>, focusing on <strong>GenAI/LLM</strong> and
-          <strong>Computer Vision</strong>. I enjoy building end-to-end projects: data → model → evaluation → deployment.
-        </p>
-        <p>
-          Graduation project: <strong>DentalGPT</strong> — fine-tuned an 8B LLM with <strong>LoRA</strong> and built a
-          <strong>RAG pipeline</strong> (ChromaDB + FAISS) for Vietnamese dental healthcare Q&A, with
-          <strong>FastAPI streaming inference</strong>.
-        </p>
-        <p>
-          Research: <strong>AMAF-Net</strong> (FSCIL multimodal), achieved <strong>Best Paper Award — ICAI 2025</strong>.
-        </p>
+        <h1>Publications</h1>
+        <p class="muted">List of research papers</p>
 
-        <hr class="sep" />
-
-        <h2>Highlights</h2>
-        <ul class="list">
-          <li><strong>LLM</strong>: DeepSeek-R1 8B fine-tuning (LoRA r=64, α=128) + RAG</li>
-          <li><strong>Research</strong>: FSCIL multimodal, alignment + prototype refinement</li>
-          <li><strong>Deployment</strong>: FastAPI, streaming inference, Docker</li>
-        </ul>
+        <div class="card">
+          <div class="card__head">
+            <h3>AMAF-Net: Training-Free Multi-Modal Alignment for Fine-Grained Counterfeit Fruit Detection</h3>
+            <span class="tag">ICAI 2025</span>
+          </div>
+          <p class="muted">
+            Best Paper Award — ICAI 2025. Multi-modal FSCIL / fine-grained recognition.
+          </p>
+          <ul class="bullets">
+            <li>Contribution: adaptive alignment + prototype refinement for stable incremental learning.</li>
+            <li>Benchmarks: TFS-Fruit, MiniImageNet.</li>
+          </ul>
+          <div class="card__links">
+            <a href="https://thieuhuy43.github.io/amaf_paper.github.io/">Paper and Code</a>
+            <a href="slide.pdf">Slides</a>
+          </div>
+        </div>
 
         <footer class="footer">
           <span class="muted">© <span id="year"></span> Nguyen Thieu Huy</span>
