--- a/experience.html
+++ b/experience.html
@@ -72,7 +72,7 @@
 
         <div class="card">
           <div class="card__head">
-            <h3>Research Assistant</h3>
+            <h3>AI Research Assistant</h3>
             <span class="tag">Feb 2024 - June 2025</span>
           </div>
           <p class="muted">
@@ -83,22 +83,6 @@
             <li>Developed AMAF-Net framework with multimodal alignment.</li>
             <li>Published paper at ICAI 2025 conference (Best Paper Award).</li>
             <li>Conducted experiments and benchmarks on TFS-Fruit, MiniImageNet datasets.</li>
-          </ul>
-        </div>
-
-        <div class="card">
-          <div class="card__head">
-            <h3>Machine Learning Intern</h3>
-            <span class="tag">Summer 2024</span>
-          </div>
-          <p class="muted">
-            <strong>E-commerce Company</strong> • Remote
-          </p>
-          <ul class="bullets">
-            <li>Built hybrid recommendation system (Collaborative + Content-based filtering).</li>
-            <li>Implemented BERT4Rec for sequential recommendation modeling.</li>
-            <li>Evaluated with metrics: Hit@K, NDCG@K, Precision@K.</li>
-            <li>Deployed model with FastAPI and Docker.</li>
           </ul>
         </div>
 
