--- a/projects.html
+++ b/projects.html
@@ -81,7 +81,7 @@
           <p class="muted">Multimodal FSCIL framework with adaptive alignment and prototype refinement.</p>
           <ul class="bullets">
             <li>Best Paper Award — ICAI 2025.</li>
-            <li>Benchmarks: TFS-Fruit, MiniImageNet (add exact numbers if you want).</li>
+            <li>Benchmarks: TFS-Fruit, MiniImageNet.</li>
           </ul>
           <div class="card__links">
             <a href="#">Paper</a>
@@ -97,7 +97,7 @@
           <p class="muted">Hybrid (CF+CBF) + BERT4Rec sequential recommendation.</p>
           <ul class="bullets">
             <li>Transformer-based sequential modeling for user behavior.</li>
-            <li>Evaluate with Hit@K / NDCG@K (add metrics if available).</li>
+            <li>Evaluate with Hit@K and NDCG@K.</li>
           </ul>
           <div class="card__links">
             <a href="#">Repo</a>
